<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, AntoMagann!</string>
    <string name="app_name">ServiceLink Client Application</string>
    <string name="wait">Wait</string>
    <string name="description">Description</string>
    <string name="how_long">How Long to Wait</string>
    <string name="select_trade">Select a Trade</string>
    <string name="add_photo">Add Photo</string>
    <string name="new_equest">New Service Request</string>
    <string name="num_requests">"Number of Requests "</string>
    <string name="trade_type">Trade Type</string>
    <string name="button">Button</string>
</resources>
